gocd/openshift/server/deploymentconfig-infrastructure-gocd-server.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: gocd-server
  labels:
    app: gocd-server
    role: infrastructure-ci
spec:
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: false
        containerNames:
          - gocd-server
        from:
          kind: ImageStreamTag
          name: 'gocd-server:latest'
  replicas: 1
  test: false
  selector:
    app: gocd-server
    deploymentconfig: gocd-server
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gocd-server
        deploymentconfig: gocd-server
    spec:
      containers:
        - name: gocd-server
          image: >-
            openshift/gocd-server:latest
          ports:
            - containerPort: 8153
              protocol: TCP
            - containerPort: 8154
              protocol: TCP
          resources:
            requests:
              cpu: '1'
              memory: 1Gi
            limits:
              cpu: '2'
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 8154
            initialDelaySeconds: 240
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8154
            initialDelaySeconds: 240
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /var/lib/go-server
            name: gocd-server-volume
      volumes:
      - name: gocd-server-volume
        persistentVolumeClaim:
          claimName: "gocd-server"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      serviceAccount: infrastructure-ci
      serviceAccountName: infrastructure-ci
