gocd/openshift/server/route-infrastructure-gocd-server.yaml
apiVersion: v1
kind: Route
metadata:
  name: gocd-server
  labels:
    app: gocd-server
    router: internet-router
spec:
  host: gocd-server-infrastructure.127.0.0.1.nip.io
  port:
    targetPort: 8153-tcp
  to:
    kind: Service
    name: gocd-server
    weight: 100
  wildcardPolicy: None
